--- a/1st PBL/IDS_Proj_1_G2.ipynb
+++ b/1st PBL/IDS_Proj_1_G2.ipynb
@@ -9047,9 +9047,7 @@
         "- The project followed a robust data science workflow: cleaning, EDA, feature engineering, modeling, and validation.\n",
         "- The best model is a regularized polynomial regression (Ridge), using both airport and time features.\n",
         "- The model generalizes well, with consistent performance on both 2017 and 2018 data.\n",
-        "- Main delay factors: airline, airport, and scheduled departure time.\n",
-        "\n",
-        "You can find the main modeling and validation code in IDS_Proj_1_G2.ipynb."
+        "- Main delay factors: airline, airport, and scheduled departure time."
       ]
     },
     {
